--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -54,6 +54,8 @@ https://github.com/elastic/beats/compare/v7.2.0...7.2[Check the HEAD diff]
 
 *Filebeat*
 
+- Add full ISO8601 date parsing support for system/syslog module. {pull}12568[12568]
+
 *Heartbeat*
 
 *Journalbeat*
