--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -254,7 +254,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add validation for elasticsearch and kibana modules' metricsets when xpack.enabled is set to true. {pull}12386[12386]
 - Add a system/entropy metricset {pull}12450[12450]
 - Allow redis URL format in redis hosts config. {pull}12408[12408]
-- Collect tags from aws resources in aws module. {issue}[12263]12263 {pull}12372[12372]
+- Add tags into ec2 metricset. {issue}[12263]12263 {pull}12372[12372]
 
 *Packetbeat*
 
