Cherry-pick #12584 to 7.2: When `certificate_authorities` is configured for ServerConfig, we now set client auth to `required` (#12586)
* When `certificate_authorities` is configured for ServerConfig, we now set client auth to `required` (#12584)

* When `certificate_authorities` is configured for ServerConfig, we now set client auth to `required`

When a CA is explicitly set in the configuration options we now default
the client authentication to required.

(cherry picked from commit 7f9998272864611dbd8fb0e6d7dd9db901bcd5aa)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -34,11 +34,15 @@ https://github.com/elastic/beats/compare/v7.2.0...7.2[Check the HEAD diff]
 
 *Filebeat*
 
+- When TLS is configured for the TCP input and a `certificate_authorities` is configured we now default to `required` for the `client_authentication`. {pull}12584[12584]
+
 *Heartbeat*
 
 *Journalbeat*
 
 *Metricbeat*
+
+- When TLS is configured for the http metricset and a `certificate_authorities` is configured we now default to `required` for the `client_authentication`. {pull}12584[12584]
 
 *Packetbeat*
 
