--- a/libbeat/docs/command-reference.asciidoc
+++ b/libbeat/docs/command-reference.asciidoc
@@ -17,11 +17,11 @@
 :deploy-command-short-desc: Deploys the specified function to your serverless environment
 
 ifndef::no_dashboards[]
-:export-command-short-desc: Exports the configuration, index template, ilm-policy, or a dashboard to stdout
+:export-command-short-desc: Exports the configuration, index template, ILM policy, or a dashboard to stdout
 endif::no_dashboards[]
 
 ifdef::no_dashboards[]
-:export-command-short-desc: Exports the configuration, index template, or ilm-policy to stdout
+:export-command-short-desc: Exports the configuration, index template, or ILM policy to stdout
 endif::no_dashboards[]
 
 :help-command-short-desc: Shows help for any command
@@ -32,15 +32,15 @@ endif::no_dashboards[]
 :run-command-short-desc: Runs {beatname_uc}. This command is used by default if you start {beatname_uc} without specifying a command
 
 ifdef::has_ml_jobs[]
-:setup-command-short-desc: Sets up the initial environment, including the index template, ilm policy and write alias, {kib} dashboards (when available), and machine learning jobs (when available)
+:setup-command-short-desc: Sets up the initial environment, including the index template, ILM policy and write alias, {kib} dashboards (when available), and machine learning jobs (when available)
 endif::[]
 
 ifdef::no_dashboards[]
-:setup-command-short-desc: Sets up the initial environment, including the ES index template, and ilm policy and write alias
+:setup-command-short-desc: Sets up the initial environment, including the ES index template, and ILM policy and write alias
 endif::no_dashboards[]
 
 ifndef::has_ml_jobs,no_dashboards[]
-:setup-command-short-desc: Sets up the initial environment, including the index template, ilm policy and write alias, and {kib} dashboards (when available)
+:setup-command-short-desc: Sets up the initial environment, including the index template, ILM policy and write alias, and {kib} dashboards (when available)
 endif::[]
 
 :update-command-short-desc: Updates the specified function
@@ -145,13 +145,13 @@ endif::[]
 ifndef::no_dashboards[]
 {export-command-short-desc}. You can use this
 command to quickly view your configuration, see the contents of the index
-template and the ilm policy, or export a dashboard from {kib}.
+template and the ILM policy, or export a dashboard from {kib}.
 endif::no_dashboards[]
 
 ifdef::no_dashboards[]
 {export-command-short-desc}. You can use this
 command to quickly view your configuration or see the contents of the index
-template or the ilm policy.
+template or the ILM policy.
 endif::no_dashboards[]
 
 *SYNOPSIS*
@@ -199,15 +199,16 @@ the template to a file instead of `stdout` by defining a directory via `--dir`.
 
 [[ilm-policy-subcommand]]
 *`ilm-policy`*::
-Exports ILM policy to stdout. You can specify the `--es.version` and a `--dir`
-to which the policy should be exported as a file rather than exporting to `stdout`.
+Exports the index lifecycle management policy to stdout. You can specify the
+`--es.version` and a `--dir` to which the policy should be exported as a
+file rather than exporting to `stdout`.
 
 *FLAGS*
 
 *`--es.version VERSION`*::
 When used with <<template-subcommand,`template`>>, exports an index
 template that is compatible with the specified version.
-When used with <<ilm-policy-subcommand,`ilm-policy`>>, exports the ilm policy
+When used with <<ilm-policy-subcommand,`ilm-policy`>>, exports the ILM policy
 if the specified ES version is enabled for ILM.
 
 *`-h, --help`*::
@@ -219,7 +220,7 @@ the index template. If this flag is not specified, the default base name is
 +{beatname_lc}+.
 
 *`--dir DIRNAME`*::
-Define a directory to which the template and ilm-policy should be exported to
+Define a directory to which the template and ILM policy should be exported to
 as files instead of printing them to `stdout`.
 
 ifndef::no_dashboards[]
@@ -648,7 +649,7 @@ endif::[]
 
 *`--index-management`*::
 Sets up components related to Elasticsearch index management including
-template, ilm policy, and write alias.
+template, ILM policy, and write alias (if supported and configured).
 
 *`--template`*::
 deprecated[7.2]
@@ -657,7 +658,7 @@ It is recommended to use `--index-management` instead.
 
 *`--ilm-policy`*::
 deprecated[7.2]
-Sets up the index lifecycle policy.
+Sets up the index lifecycle management policy.
 It is recommended to use `--index-management` instead.
 
 {global-flags}
