--- a/libbeat/docs/loggingconfig.asciidoc
+++ b/libbeat/docs/loggingconfig.asciidoc
@@ -49,10 +49,12 @@ TIP: In addition to setting logging options in the config file, you can modify
 the logging output configuration from the command line. See
 <<command-line-options>>.
 
+ifndef::win_only[]
 WARNING: When {beatname_uc} is running on a Linux system with systemd, it uses
 by default the `-e` command line option, that makes it write all the logging output
 to stderr so it can be captured by journald. Other outputs are disabled. See
 <<running-with-systemd>> to know more and learn how to change this.
+endif::win_only[]
 endif::serverless[]
 
 ifdef::serverless[]
