Fix a race condition with the kafka pipeline client. (#11950) (#12453)
* Fix a race condition with the kafka pipeline client. (#11950)

* Fix a race condition with the kafka pipeline client.

Fix a nil pointer due to a race condition inside the Kafka client when
Close was called before connect(), added a lock to protect the mutation
and added a check for the nil.

* Update CHANGELOG.next.asciidoc

(cherry picked from commit fb86498854c940cabcfbf1f6758a3e30c0c26c2d)

* changelog

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -30,6 +30,8 @@ https://github.com/elastic/beats/compare/v7.2.0...7.2[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Fix a race condition with the Kafka pipeline client, it is possible that `Close()` get called before `Connect()` . {issue}11945[11945]
+
 *Auditbeat*
 
 - Host dataset: Fix reboot detection logic. {pull}12591[12591]
