--- a/libbeat/docs/command-reference.asciidoc
+++ b/libbeat/docs/command-reference.asciidoc
@@ -79,6 +79,11 @@ Use `sudo` to run the following commands if:
 =========================
 endif::[]
 
+Some of the features described here require an Elastic license. For
+more information, see https://www.elastic.co/subscriptions and
+{stack-ov}/license-management.html[License Management].
+
+
 [options="header"]
 |=======================
 |Commands |
