Cherry-pick #12476 to 7.2: Fix 11975 - change Kubernetes container cpu cores fields to float (#12609)
* Fix 11975 - change Kubernetes container cpu cores fields to float (#12476)

* Fix 11975 kubernetes cores fields data type long -> float (#11975)

kubernetes.container.cpu.limit.cores is now a float
kubernetes.container.cpu.request.cores is now a float

(cherry picked from commit 8502c794b9c6403391530c98f84a596d3de80d54)

* Update CHANGELOG.next.asciidoc

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -20,6 +20,8 @@ https://github.com/elastic/beats/compare/v7.2.0...7.2[Check the HEAD diff]
 
 *Metricbeat*
 
+- kubernetes.container.cpu.limit.cores and kubernetes.container.cpu.requests.cores are now floats. {issue}11975[11975]
+
 *Packetbeat*
 
 *Winlogbeat*
