--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -5,7 +5,7 @@
 
 [[release-notes-6.8.1]]
 === Beats version 6.8.1
-https://github.com/elastic/beats/compare/v6.7.1...v6.7.2[View commits]
+https://github.com/elastic/beats/compare/v6.8.0...v6.8.1[View commits]
 
 ==== Bugfixes
 
@@ -22,6 +22,7 @@ https://github.com/elastic/beats/compare/v6.7.1...v6.7.2[View commits]
 - Fix direction of incoming IPv6 sockets. {pull}12248[12248]
 - Package dataset: Auto-detect package directories. {pull}12289[12289]
 - System module: Start system module without host ID. {pull}12373[12373]
+- Host dataset: Fix reboot detection logic. {pull}12591[12591]
 
 *Filebeat*
 
@@ -31,6 +32,7 @@ https://github.com/elastic/beats/compare/v6.7.1...v6.7.2[View commits]
 - Fix memory leak in Filebeat pipeline acker. {pull}12063[12063]
 - Fix goroutine leak on non-explicit finalization of log input. {pull}12164[12164]
 - Require client_auth by default when ssl is enabled for tcp input {pull}12333[12333]
+- When TLS is configured for the TCP input and a `certificate_authorities` is configured we now default to `required` for the `client_authentication`. {pull}12584[12584]
 
 *Metricbeat*
 
@@ -41,6 +43,7 @@ https://github.com/elastic/beats/compare/v6.7.1...v6.7.2[View commits]
 - Require certificate authorities, certificate file, and key when SSL is enabled for module http metricset server. {pull}12355[12355]
 - In the kibana/stats metricset, only log error (don't also index it) if xpack is enabled. {pull}12353[12353]
 - The `elasticsearch/index_summary` metricset gracefully handles an empty Elasticsearch cluster when `xpack.enabled: true` is set. {pull}12489[12489] {issue}12487[12487]
+- When TLS is configured for the http metricset and a `certificate_authorities` is configured we now default to `required` for the `client_authentication`. {pull}12584[12584]
 
 *Packetbeat*
 
