--- a/libbeat/docs/version.asciidoc
+++ b/libbeat/docs/version.asciidoc
@@ -2,7 +2,7 @@
 :brew-version: 8.0
 :doc-branch: master
 :go-version: 1.12.4
-:release-state: released
+:release-state: unreleased
 :python: 2.7.9
 :docker: 1.12
 :docker-compose: 1.11
